--- a/examples/example_genetic_shortest_path.ipynb
+++ b/examples/example_genetic_shortest_path.ipynb
@@ -13,19 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#inputs\n",
-    "nodes = pd.read_excel('data/route_inputs.xlsx', sheet_name='nodes')\n",
-    "paths = pd.read_excel('data/route_inputs.xlsx', sheet_name='paths')\n",
+    "nodes = pd.read_excel('../data/route_inputs.xlsx', sheet_name='nodes')\n",
+    "paths = pd.read_excel('../data/route_inputs.xlsx', sheet_name='paths')\n",
     "nVars = len(paths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_124404/3756869960.py:6: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
+      "/tmp/ipykernel_14655/3756869960.py:6: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
       "  node_origin = int(nodes.node[nodes.description=='origin'])\n",
-      "/tmp/ipykernel_124404/3756869960.py:11: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
+      "/tmp/ipykernel_14655/3756869960.py:11: FutureWarning: Calling int on a single element Series is deprecated and will raise a TypeError in the future. Use int(ser.iloc[0]) instead\n",
       "  node_destination = int(nodes.node[nodes.description=='destination'])\n"
      ]
     },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
